--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
